# NMEA2000

./: .gitignore  .travis.yml  1__mainpage_8md.html  2__lib_ref_8md.html  3__hw_setup_8md.html  4__getting_started_8md.html  5__supported_msg_8md.html  6__develop_info_8md.html  7__glossary_8md.html  ActisenseReader.cpp  ActisenseReader.h  CMakeLists.alone.txt  CMakeLists.txt  N2kCANMsg.h  N2kDef.h  N2kGroupFunction.cpp  N2kGroupFunction.h  N2kGroupFunctionDefaultHandlers.cpp  N2kMessages.cpp  N2kMessages.h  N2kMessagesEnumToStr.h  N2kMsg.cpp  N2kMsg.h  N2kStream.cpp  N2kStream.h  NMEA2000.cpp  NMEA2000.h  NMEA2000_CAN.h  README.adoc  README.md  _actisense_reader_8cpp.html  _actisense_reader_8cpp.js  _actisense_reader_8cpp__incl.map  _actisense_reader_8cpp__incl.md5  _actisense_reader_8cpp_source.html  _actisense_reader_8h.html  _actisense_reader_8h.js  _actisense_reader_8h__dep__incl.map  _actisense_reader_8h__dep__incl.md5  _actisense_reader_8h__incl.map  (+606 more)
.github/workflows/: compile-examples-arduino-esp32-v1.yml  compile-examples-arduino-esp32-v2.yml  doxygen-gh-pages.yml  unit-tests.yml
Documents/: NMEA2000_MainDocument.md  test.txt
Documents/src/: 1_mainpage.md  2_libRef.md  3_hwSetup.md  4_gettingStarted.md  5_supportedMsg.md  6_developInfo.md  7_glossary.md  DoxyConf  changes.md  groupdef.dox
Examples/ActisenseListener/: ActisenseListener.ino  README.md
Examples/ActisenseListenerSender/: ActisenseListenerSender.ino
Examples/ArduinoGateway/: ArduinoGateway.ino
Examples/BatteryMonitor/: BatteryMonitor.ino
Examples/DataDisplay/: DataDisplay.ino
Examples/DataDisplay2/: DataDisplay2.ino  README.md
Examples/DeviceAnalyzer/: DeviceAnalyzer.ino
Examples/FromPCToN2k/: FromPCToN2k.ino
Examples/MessageSender/: MessageSender.ino  README.md
Examples/MultiDevice/: MultiDevice.ino
Examples/NMEA2000ToNMEA0183/: BoardSerialNumber.cpp  BoardSerialNumber.h  N2kDataToNMEA0183.cpp  N2kDataToNMEA0183.h  N2kToNMEA0183.cbp  N2kToNMEA0183.depend  N2kToNMEA0183.layout  README.adoc  (+2 more)
scripts/: cmake.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.html  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  (+84 more)
src/: ActisenseReader.cpp  ActisenseReader.h  CMakeLists.txt  N2kCANMsg.h  N2kCZone.cpp  N2kCZone.h  N2kDef.h  N2kDeviceList.cpp  N2kDeviceList.h  N2kGroupFunction.cpp  N2kGroupFunction.h  N2kGroupFunctionDefaultHandlers.cpp  N2kGroupFunctionDefaultHandlers.h  N2kMaretron.cpp  N2kMaretron.h  N2kMaretron.xxx  N2kMessages.cpp  N2kMessages.h  N2kMessagesEnumToStr.h  N2kMsg.cpp  N2kMsg.h  N2kSeaRecovery.cpp  N2kSeaRecovery.h  N2kStr.h  N2kStream.cpp  N2kStream.h  N2kTimer.cpp  N2kTimer.h  N2kTypes.h  NMEA2000.cpp  NMEA2000.h  NMEA2000StdTypes.h  NMEA2000_CAN.h  NMEA2000_CompilerDefns.h  NMEA2000_SocketCAN.cpp  NMEA2000_SocketCAN.h  RingBuffer.h  RingBuffer.tpp  Seasmart.cpp  Seasmart.h  (+2 more)
test/: .gitignore  CMakeLists.txt  N2kCZoneTest.cpp  N2kMessagesTest.cpp  SeasmartTests.cpp  millis.cpp
(+11 files in other folders)
